--- a/Views/GraphVisualizationView.xaml
+++ b/Views/GraphVisualizationView.xaml
@@ -1,12 +1,15 @@
-﻿<UserControl x:Class="AdvancedCalculator.Views.GraphView"
+﻿<UserControl x:Class="AdvancedCalculator.Views.GraphVisualizationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AdvancedCalculator.Views"
+             xmlns:viewModel="clr-namespace:AdvancedCalculator.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewModel:GraphVisualizationViewModel />
+    </UserControl.DataContext>
     <Grid>
-        <Label>Graph View</Label>
+        <Label>Graphing</Label>
     </Grid>
 </UserControl>
