Implement matrix calculator with basic operations

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -19,6 +19,7 @@
             <Button Content="Basic calc." Height="25" Command="{Binding NavigateToBasicCalculatorCommand}" />
             <Button Content="Scientific calc." Height="25" Command="{Binding NavigateToScientificCalculatorCommand}" />
             <Button Content="Complex calc." Height="25" Command="{Binding NavigateToComplexCalculatorCommand}" />
+            <Button Content="Matrix calc." Height="25" Command="{Binding NavigateToMatrixCalculatorCommand}" />
             <Button Content="Graphs" Height="25" Command="{Binding NavigateToGraphVisualizationCommand}" />
             <Button Content="Functions" Height="25" Command="{Binding NavigateToFunctionPlotCommand}" />
         </StackPanel>
