--- a/App.xaml
+++ b/App.xaml
@@ -13,6 +13,9 @@
         <DataTemplate DataType="{x:Type viewModel:ComplexCalculatorViewModel}">
             <view:ComplexCalculatorView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:MatrixCalculatorViewModel}">
+            <view:MatrixCalculatorView />
+        </DataTemplate>
         <DataTemplate DataType="{x:Type viewModel:GraphVisualizationViewModel}">
             <view:GraphVisualizationView />
         </DataTemplate>
