--- a/Views/ComplexCalculatorView.xaml
+++ b/Views/ComplexCalculatorView.xaml
@@ -45,8 +45,11 @@
             </StackPanel>
         </GroupBox>
 
-        <Button Command="{Binding SwapCommand}" Grid.Row="0" Grid.Column="2" Height="25" Width="40">
-            <TextBlock Text="↔" FontSize="20" VerticalAlignment="Center" />
+        <Button Command="{Binding SwapCommand}" Grid.Row="0" Grid.Column="2" Height="30" Width="40">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Swap" TextAlignment="Center" Margin="0 0 0 -10" />
+                <TextBlock Text="↔" FontSize="18" TextAlignment="Center" />
+            </StackPanel>
         </Button>
 
         <GroupBox Header="Complex 2" Grid.Row="0" Grid.Column="3" Margin="5 0 0 0">
