Increase horizontal and vertical gap for overlap removal algorithm

--- a/Views/GraphVisualizationView.xaml
+++ b/Views/GraphVisualizationView.xaml
@@ -94,6 +94,7 @@
                 Graph="{Binding Graph}"
                 LayoutAlgorithmType="{Binding SelectedAlgorithm}"
                 OverlapRemovalAlgorithmType="FSA"
+                OverlapRemovalParameters="{Binding OverlapRemovalParameters}"
                 HighlightAlgorithmType="Simple"
                 Grid.Row="4"
                 Grid.Column="1">
